# holofoil

./: Cargo.toml
.github/workflows/: deploy.yaml
examples/: showcase.rs
examples/showcase/: Cargo.toml  index.html
examples/showcase/src/: main.rs
src/: card.rs  lib.rs  quaternion.rs  shader.wgsl  vector.rs
src/shader/: linear_rgb.wgsl  srgb.wgsl
