[package]
name = "holofoil"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck.workspace = true
bytes.workspace = true
wgpu.workspace = true

[workspace]
members = ["examples/*"]

[workspace.dependencies]
holofoil = { path = "." }

bytemuck = "1"
bytes = "1"
wgpu = "26"

console_error_panic_hook = "0.1"
notify = "8"
png = "0.18"

iced.version = "0.14.0-dev"
iced.default-features = false

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git" }
