[package]
name = "showcase"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
holofoil.workspace = true
log.workspace = true
png.workspace = true

iced.workspace = true
iced.features = ["wgpu", "webgl", "auto-detect-theme", "thread-pool"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify-debouncer-full.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
