[package]
name = "showcase"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
holofoil.workspace = true
iced_palace.workspace = true
log.workspace = true
png.workspace = true

iced.workspace = true
iced.features = ["wgpu", "thread-pool", "crisp", "svg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify-debouncer-full.workspace = true
open.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
web-sys.workspace = true
web-sys.features = ["Window", "Location"]

iced.workspace = true
iced.features = ["webgl", "web-colors"]
